fixed letter clipping

--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -17,6 +17,7 @@
     line-height: 75px;
     letter-spacing: -0.04em;
     color: #fff;
+    padding-bottom: 0.5rem;
 }
 
 .gpt3__blog-container {
