--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -18,7 +18,7 @@
     font-size: 62px;
     line-height: 75px;
     letter-spacing: -0.04em;
-    
+    padding-bottom: 0.5rem;
 }
 
 .gpt3__header-content p {
